--- a/ads.html
+++ b/ads.html
@@ -77,7 +77,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="complaints.html" class="active">
+					<a href="complaints.html">
 						<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M17.43 10.98C17.47 10.66 17.5 10.34 17.5 10C17.5 9.66 17.47 9.34 17.43 9.02L19.54 7.37C19.73 7.22 19.78 6.95 19.66 6.73L17.66 3.27C17.54 3.05 17.27 2.97 17.05 3.05L14.56 4.05C14.04 3.65 13.48 3.32 12.87 3.07L12.49 0.42C12.46 0.18 12.25 0 12 0H8.00002C7.75002 0 7.54002 0.18 7.51002 0.42L7.13002 3.07C6.52002 3.32 5.96002 3.66 5.44002 4.05L2.95002 3.05C2.72002 2.96 2.46002 3.05 2.34002 3.27L0.340022 6.73C0.210022 6.95 0.270023 7.22 0.460023 7.37L2.57002 9.02C2.53002 9.34 2.50002 9.67 2.50002 10C2.50002 10.33 2.53002 10.66 2.57002 10.98L0.460023 12.63C0.270023 12.78 0.220022 13.05 0.340022 13.27L2.34002 16.73C2.46002 16.95 2.73002 17.03 2.95002 16.95L5.44002 15.95C5.96002 16.35 6.52002 16.68 7.13002 16.93L7.51002 19.58C7.54002 19.82 7.75002 20 8.00002 20H12C12.25 20 12.46 19.82 12.49 19.58L12.87 16.93C13.48 16.68 14.04 16.34 14.56 15.95L17.05 16.95C17.28 17.04 17.54 16.95 17.66 16.73L19.66 13.27C19.78 13.05 19.73 12.78 19.54 12.63L17.43 10.98ZM10 13.5C8.07002 13.5 6.50002 11.93 6.50002 10C6.50002 8.07 8.07002 6.5 10 6.5C11.93 6.5 13.5 8.07 13.5 10C13.5 11.93 11.93 13.5 10 13.5Z" fill="white"/>
 						</svg>
@@ -93,7 +93,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="ads.html" class="active">
 						<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M17.43 10.98C17.47 10.66 17.5 10.34 17.5 10C17.5 9.66 17.47 9.34 17.43 9.02L19.54 7.37C19.73 7.22 19.78 6.95 19.66 6.73L17.66 3.27C17.54 3.05 17.27 2.97 17.05 3.05L14.56 4.05C14.04 3.65 13.48 3.32 12.87 3.07L12.49 0.42C12.46 0.18 12.25 0 12 0H8.00002C7.75002 0 7.54002 0.18 7.51002 0.42L7.13002 3.07C6.52002 3.32 5.96002 3.66 5.44002 4.05L2.95002 3.05C2.72002 2.96 2.46002 3.05 2.34002 3.27L0.340022 6.73C0.210022 6.95 0.270023 7.22 0.460023 7.37L2.57002 9.02C2.53002 9.34 2.50002 9.67 2.50002 10C2.50002 10.33 2.53002 10.66 2.57002 10.98L0.460023 12.63C0.270023 12.78 0.220022 13.05 0.340022 13.27L2.34002 16.73C2.46002 16.95 2.73002 17.03 2.95002 16.95L5.44002 15.95C5.96002 16.35 6.52002 16.68 7.13002 16.93L7.51002 19.58C7.54002 19.82 7.75002 20 8.00002 20H12C12.25 20 12.46 19.82 12.49 19.58L12.87 16.93C13.48 16.68 14.04 16.34 14.56 15.95L17.05 16.95C17.28 17.04 17.54 16.95 17.66 16.73L19.66 13.27C19.78 13.05 19.73 12.78 19.54 12.63L17.43 10.98ZM10 13.5C8.07002 13.5 6.50002 11.93 6.50002 10C6.50002 8.07 8.07002 6.5 10 6.5C11.93 6.5 13.5 8.07 13.5 10C13.5 11.93 11.93 13.5 10 13.5Z" fill="white"/>
 						</svg>
@@ -171,11 +171,11 @@
 	<main>
 		<nav class="mb-4">
 		  <ol class="breadcrumb">
-		    <li class="breadcrumb-item"><a href="#">Жалобы</a></li>
+		    <li class="breadcrumb-item"><a href="#">Объявления</a></li>
 		    <li class="breadcrumb-item"><a href="#">Список</a></li>
 		  </ol>
 		</nav>
-		<h1>Жалобы</h1>
+		<h1>Объявления</h1>
 		<div class="d-flex justify-content-between align-items-center mb-4">
 			<div class="d-flex">
 				<select class="mr-2">
@@ -187,6 +187,11 @@
 					<option selected disabled>Оплата</option>
 					<option value="Оплачено">Оплачено</option>
 					<option value="Не оплачено">Не оплачено</option>
+				</select>
+				<select class="mr-2">
+					<option selected disabled>Жалобы</option>
+					<option value="Жалобы">Жалобы</option>
+					<option value="Жалобы">Жалобы</option>
 				</select>
 				<input type="search" placeholder="Название аккаунта..." class="fit">
 			</div>
@@ -215,19 +220,8 @@
 						</th>
 						<th>
 							<div class="d-flex justify-content-between">
-								<span>Категория</span>
-								<button class="btn_sort" data-sort="a-to-z">
-									<svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M3 0.5L-1.31134e-07 3.5L2.25 3.5L2.25 14.75L3.75 14.75L3.75 3.5L6 3.5L3 0.5Z"/>
-										<path d="M9 15.5L12 12.5L9.75 12.5L9.75 1.25L8.25 1.25L8.25 12.5L6 12.5L9 15.5Z"/>
-									</svg>
-								</button>
-							</div>
-						</th>
-						<th>
-							<div class="d-flex justify-content-between">
 								<span>Название объявления</span>
-								<button class="btn_sort" data-sort="z-to-a">
+								<button class="btn_sort" data-sort="a-to-z">
 									<svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M3 0.5L-1.31134e-07 3.5L2.25 3.5L2.25 14.75L3.75 14.75L3.75 3.5L6 3.5L3 0.5Z"/>
 										<path d="M9 15.5L12 12.5L9.75 12.5L9.75 1.25L8.25 1.25L8.25 12.5L6 12.5L9 15.5Z"/>
@@ -249,7 +243,7 @@
 						<th>
 							<div class="d-flex justify-content-between">
 								<span>Имя пользователя</span>
-								<button class="btn_sort" data-sort="z-to-a">
+								<button class="btn_sort">
 									<svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M3 0.5L-1.31134e-07 3.5L2.25 3.5L2.25 14.75L3.75 14.75L3.75 3.5L6 3.5L3 0.5Z"/>
 										<path d="M9 15.5L12 12.5L9.75 12.5L9.75 1.25L8.25 1.25L8.25 12.5L6 12.5L9 15.5Z"/>
@@ -259,8 +253,8 @@
 						</th>
 						<th>
 							<div class="d-flex justify-content-between">
-								<span>Кол-во жалоб</span>
-								<button class="btn_sort" data-sort="z-to-a">
+								<span>Кол-в жалоб</span>
+								<button class="btn_sort">
 									<svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M3 0.5L-1.31134e-07 3.5L2.25 3.5L2.25 14.75L3.75 14.75L3.75 3.5L6 3.5L3 0.5Z"/>
 										<path d="M9 15.5L12 12.5L9.75 12.5L9.75 1.25L8.25 1.25L8.25 12.5L6 12.5L9 15.5Z"/>
@@ -271,7 +265,7 @@
 						<th>
 							<div class="d-flex justify-content-between">
 								<span>Бан/дн</span>
-								<button class="btn_sort" data-sort="z-to-a">
+								<button class="btn_sort">
 									<svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M3 0.5L-1.31134e-07 3.5L2.25 3.5L2.25 14.75L3.75 14.75L3.75 3.5L6 3.5L3 0.5Z"/>
 										<path d="M9 15.5L12 12.5L9.75 12.5L9.75 1.25L8.25 1.25L8.25 12.5L6 12.5L9 15.5Z"/>
@@ -285,12 +279,11 @@
 				<tbody>
 					<tr>
 						<td>1</td>
-						<td>Франшиза</td>
 						<td>Название объявления</td>
 						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td></td>
-						<td></td>
+						<td>10</td>
+						<td>3</td>
 						<td>
 							<div class="d-flex justify-content-center">
 								<button type="button" class="btn-lock" data-toggle="modal" data-target="#modal-lock"></button>
@@ -299,11 +292,10 @@
 					</tr>
 					<tr>
 						<td>2</td>
-						<td>Инвестор</td>
 						<td>Название объявления</td>
 						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td></td>
+						<td>5</td>
 						<td></td>
 						<td>
 							<div class="d-flex justify-content-center">
@@ -313,25 +305,23 @@
 					</tr>
 					<tr>
 						<td>3</td>
-						<td>Бизнес партнёр</td>
 						<td>Название объявления</td>
 						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td>4 (12) </td>
-						<td>7</td>
+						<td>5</td>
+						<td></td>
 						<td>
 							<div class="d-flex justify-content-center">
-								<button type="button" class="btn-lock" data-toggle="modal" data-target="#modal-lock"></button>
+								<button type="button" class="btn-lock locked" data-toggle="modal" data-target="#modal-lock"></button>
 							</div>
 						</td>
 					</tr>
 					<tr>
 						<td>4</td>
-						<td>Франшиза</td>
 						<td>Название объявления</td>
 						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td></td>
+						<td>5</td>
 						<td></td>
 						<td>
 							<div class="d-flex justify-content-center">
@@ -341,53 +331,36 @@
 					</tr>
 					<tr>
 						<td>5</td>
-						<td>Инвестор</td>
 						<td>Название объявления</td>
 						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td></td>
-						<td></td>
+						<td>5</td>
+						<td>4</td>
 						<td>
 							<div class="d-flex justify-content-center">
-								<button type="button" class="btn-lock locked" data-toggle="modal" data-target="#modal-lock"></button>
+								<button type="button" class="btn-lock" data-toggle="modal" data-target="#modal-lock"></button>
 							</div>
 						</td>
 					</tr>
 					<tr>
 						<td>6</td>
-						<td>Бизнес партнёр</td>
 						<td>Название объявления</td>
 						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td>4 (12) </td>
-						<td>7</td>
+						<td>5</td>
+						<td>1</td>
 						<td>
 							<div class="d-flex justify-content-center">
-								<button type="button" class="btn-lock locked" data-toggle="modal" data-target="#modal-lock"></button>
+								<button type="button" class="btn-lock" data-toggle="modal" data-target="#modal-lock"></button>
 							</div>
 						</td>
 					</tr>
 					<tr>
 						<td>7</td>
-						<td>Франшиза</td>
 						<td>Название объявления</td>
 						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td></td>
-						<td></td>
-						<td>
-							<div class="d-flex justify-content-center">
-								<button type="button" class="btn-lock locked" data-toggle="modal" data-target="#modal-lock"></button>
-							</div>
-						</td>
-					</tr>
-					<tr>
-						<td>8</td>
-						<td>Инвестор</td>
-						<td>Название объявления</td>
-						<td>Не оплачено</td>
-						<td>mail@mail.ru</td>
-						<td></td>
+						<td>5</td>
 						<td></td>
 						<td>
 							<div class="d-flex justify-content-center">
@@ -396,13 +369,25 @@
 						</td>
 					</tr>
 					<tr>
-						<td>9</td>
-						<td>Бизнес партнёр</td>
+						<td>8</td>
 						<td>Название объявления</td>
 						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td>4 (12) </td>
-						<td>7</td>
+						<td>5</td>
+						<td>2</td>
+						<td>
+							<div class="d-flex justify-content-center">
+								<button type="button" class="btn-lock locked" data-toggle="modal" data-target="#modal-lock"></button>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td>9</td>
+						<td>Название объявления</td>
+						<td>Не оплачено</td>
+						<td>mail@mail.ru</td>
+						<td>5</td>
+						<td></td>
 						<td>
 							<div class="d-flex justify-content-center">
 								<button type="button" class="btn-lock" data-toggle="modal" data-target="#modal-lock"></button>
@@ -483,7 +468,7 @@
 
 	<!-- Skripts -->
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
+	<script type="text/javascript" src="js/jquery.fancybox.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
