--- a/moderation.html
+++ b/moderation.html
@@ -77,7 +77,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="complaints.html" class="active">
+					<a href="complaints.html">
 						<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M17.43 10.98C17.47 10.66 17.5 10.34 17.5 10C17.5 9.66 17.47 9.34 17.43 9.02L19.54 7.37C19.73 7.22 19.78 6.95 19.66 6.73L17.66 3.27C17.54 3.05 17.27 2.97 17.05 3.05L14.56 4.05C14.04 3.65 13.48 3.32 12.87 3.07L12.49 0.42C12.46 0.18 12.25 0 12 0H8.00002C7.75002 0 7.54002 0.18 7.51002 0.42L7.13002 3.07C6.52002 3.32 5.96002 3.66 5.44002 4.05L2.95002 3.05C2.72002 2.96 2.46002 3.05 2.34002 3.27L0.340022 6.73C0.210022 6.95 0.270023 7.22 0.460023 7.37L2.57002 9.02C2.53002 9.34 2.50002 9.67 2.50002 10C2.50002 10.33 2.53002 10.66 2.57002 10.98L0.460023 12.63C0.270023 12.78 0.220022 13.05 0.340022 13.27L2.34002 16.73C2.46002 16.95 2.73002 17.03 2.95002 16.95L5.44002 15.95C5.96002 16.35 6.52002 16.68 7.13002 16.93L7.51002 19.58C7.54002 19.82 7.75002 20 8.00002 20H12C12.25 20 12.46 19.82 12.49 19.58L12.87 16.93C13.48 16.68 14.04 16.34 14.56 15.95L17.05 16.95C17.28 17.04 17.54 16.95 17.66 16.73L19.66 13.27C19.78 13.05 19.73 12.78 19.54 12.63L17.43 10.98ZM10 13.5C8.07002 13.5 6.50002 11.93 6.50002 10C6.50002 8.07 8.07002 6.5 10 6.5C11.93 6.5 13.5 8.07 13.5 10C13.5 11.93 11.93 13.5 10 13.5Z" fill="white"/>
 						</svg>
@@ -117,7 +117,7 @@
 					</a>
 				</li>
 				<li>
-					<a href="#">
+					<a href="moderation.html" class="active">
 						<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M17.43 10.98C17.47 10.66 17.5 10.34 17.5 10C17.5 9.66 17.47 9.34 17.43 9.02L19.54 7.37C19.73 7.22 19.78 6.95 19.66 6.73L17.66 3.27C17.54 3.05 17.27 2.97 17.05 3.05L14.56 4.05C14.04 3.65 13.48 3.32 12.87 3.07L12.49 0.42C12.46 0.18 12.25 0 12 0H8.00002C7.75002 0 7.54002 0.18 7.51002 0.42L7.13002 3.07C6.52002 3.32 5.96002 3.66 5.44002 4.05L2.95002 3.05C2.72002 2.96 2.46002 3.05 2.34002 3.27L0.340022 6.73C0.210022 6.95 0.270023 7.22 0.460023 7.37L2.57002 9.02C2.53002 9.34 2.50002 9.67 2.50002 10C2.50002 10.33 2.53002 10.66 2.57002 10.98L0.460023 12.63C0.270023 12.78 0.220022 13.05 0.340022 13.27L2.34002 16.73C2.46002 16.95 2.73002 17.03 2.95002 16.95L5.44002 15.95C5.96002 16.35 6.52002 16.68 7.13002 16.93L7.51002 19.58C7.54002 19.82 7.75002 20 8.00002 20H12C12.25 20 12.46 19.82 12.49 19.58L12.87 16.93C13.48 16.68 14.04 16.34 14.56 15.95L17.05 16.95C17.28 17.04 17.54 16.95 17.66 16.73L19.66 13.27C19.78 13.05 19.73 12.78 19.54 12.63L17.43 10.98ZM10 13.5C8.07002 13.5 6.50002 11.93 6.50002 10C6.50002 8.07 8.07002 6.5 10 6.5C11.93 6.5 13.5 8.07 13.5 10C13.5 11.93 11.93 13.5 10 13.5Z" fill="white"/>
 						</svg>
@@ -166,29 +166,28 @@
 				</li>
 			</ul>
 		</nav>
+		<button type="button" class="close-aside">
+			<svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<path d="M16 1.61143L14.3886 0L8 6.38857L1.61143 0L0 1.61143L6.38857 8L0 14.3886L1.61143 16L8 9.61143L14.3886 16L16 14.3886L9.61143 8L16 1.61143Z" fill="#323232"></path>
+			</svg>
+		</button>
 	</aside>
 
 	<main>
 		<nav class="mb-4">
 		  <ol class="breadcrumb">
-		    <li class="breadcrumb-item"><a href="#">Жалобы</a></li>
+		    <li class="breadcrumb-item"><a href="#">Модерация</a></li>
 		    <li class="breadcrumb-item"><a href="#">Список</a></li>
 		  </ol>
 		</nav>
-		<h1>Жалобы</h1>
+		<h1>Модерация</h1>
 		<div class="d-flex justify-content-between align-items-center mb-4">
 			<div class="d-flex">
-				<select class="mr-2">
-					<option selected disabled>Категория</option>
-					<option value="Категория 1">Категория 1</option>
-					<option value="Категория 2">Категория 2</option>
-				</select>
 				<select class="mr-2">
 					<option selected disabled>Оплата</option>
 					<option value="Оплачено">Оплачено</option>
 					<option value="Не оплачено">Не оплачено</option>
 				</select>
-				<input type="search" placeholder="Название аккаунта..." class="fit">
 			</div>
 			<form action="" class="form-search">
 				<button type="submit">
@@ -199,6 +198,14 @@
 				<input type="search" placeholder="Поиск">
 			</form>
 		</div>
+
+		<!--
+			атрибут data-state задает/изменяет текст кнопки "Публиковать"/"Опубликовано"
+			от этого же атрибута зависит текст в модальном окне.
+			код, отвечающий за формирование текста в модалке, находится в main.js
+			main.js * modal window for publication *
+		-->
+
 		<div class="table-responsive">
 			<table class="table table-bordered mb-0">
 				<thead>
@@ -215,30 +222,8 @@
 						</th>
 						<th>
 							<div class="d-flex justify-content-between">
-								<span>Категория</span>
-								<button class="btn_sort" data-sort="a-to-z">
-									<svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M3 0.5L-1.31134e-07 3.5L2.25 3.5L2.25 14.75L3.75 14.75L3.75 3.5L6 3.5L3 0.5Z"/>
-										<path d="M9 15.5L12 12.5L9.75 12.5L9.75 1.25L8.25 1.25L8.25 12.5L6 12.5L9 15.5Z"/>
-									</svg>
-								</button>
-							</div>
-						</th>
-						<th>
-							<div class="d-flex justify-content-between">
 								<span>Название объявления</span>
-								<button class="btn_sort" data-sort="z-to-a">
-									<svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M3 0.5L-1.31134e-07 3.5L2.25 3.5L2.25 14.75L3.75 14.75L3.75 3.5L6 3.5L3 0.5Z"/>
-										<path d="M9 15.5L12 12.5L9.75 12.5L9.75 1.25L8.25 1.25L8.25 12.5L6 12.5L9 15.5Z"/>
-									</svg>
-								</button>
-							</div>
-						</th>
-						<th>
-							<div class="d-flex justify-content-between">
-								<span>Оплата</span>
-								<button class="btn_sort" data-sort="z-to-a">
+								<button class="btn_sort" data-sort="a-to-z">
 									<svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 										<path d="M3 0.5L-1.31134e-07 3.5L2.25 3.5L2.25 14.75L3.75 14.75L3.75 3.5L6 3.5L3 0.5Z"/>
 										<path d="M9 15.5L12 12.5L9.75 12.5L9.75 1.25L8.25 1.25L8.25 12.5L6 12.5L9 15.5Z"/>
@@ -259,17 +244,6 @@
 						</th>
 						<th>
 							<div class="d-flex justify-content-between">
-								<span>Кол-во жалоб</span>
-								<button class="btn_sort" data-sort="z-to-a">
-									<svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M3 0.5L-1.31134e-07 3.5L2.25 3.5L2.25 14.75L3.75 14.75L3.75 3.5L6 3.5L3 0.5Z"/>
-										<path d="M9 15.5L12 12.5L9.75 12.5L9.75 1.25L8.25 1.25L8.25 12.5L6 12.5L9 15.5Z"/>
-									</svg>
-								</button>
-							</div>
-						</th>
-						<th>
-							<div class="d-flex justify-content-between">
 								<span>Бан/дн</span>
 								<button class="btn_sort" data-sort="z-to-a">
 									<svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -280,133 +254,143 @@
 							</div>
 						</th>
 						<th></th>
+						<th>
+							<div class="d-flex justify-content-center">
+								<button class="btn_sort">
+									<svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M3 0.5L-1.31134e-07 3.5L2.25 3.5L2.25 14.75L3.75 14.75L3.75 3.5L6 3.5L3 0.5Z"/>
+										<path d="M9 15.5L12 12.5L9.75 12.5L9.75 1.25L8.25 1.25L8.25 12.5L6 12.5L9 15.5Z"/>
+									</svg>
+								</button>
+							</div>
+						</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
 						<td>1</td>
-						<td>Франшиза</td>
 						<td>Название объявления</td>
-						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td></td>
-						<td></td>
+						<td>10</td>
 						<td>
 							<div class="d-flex justify-content-center">
 								<button type="button" class="btn-lock" data-toggle="modal" data-target="#modal-lock"></button>
 							</div>
+						</td>
+						<td>
+							<button type="button" data-toggle="modal" data-target="#modal-publication" data-state="not-published" class="btn_main btn_2 btn-public w-100"></button>
 						</td>
 					</tr>
 					<tr>
 						<td>2</td>
-						<td>Инвестор</td>
 						<td>Название объявления</td>
-						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td></td>
 						<td></td>
 						<td>
 							<div class="d-flex justify-content-center">
 								<button type="button" class="btn-lock locked" data-toggle="modal" data-target="#modal-lock"></button>
 							</div>
+						</td>
+						<td>
+							<button type="button" data-toggle="modal" data-target="#modal-publication" data-state="published" class="btn_main btn_2 btn-public w-100"></button>
 						</td>
 					</tr>
 					<tr>
 						<td>3</td>
-						<td>Бизнес партнёр</td>
 						<td>Название объявления</td>
-						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td>4 (12) </td>
-						<td>7</td>
+						<td>5</td>
 						<td>
 							<div class="d-flex justify-content-center">
-								<button type="button" class="btn-lock" data-toggle="modal" data-target="#modal-lock"></button>
+								<button type="button" class="btn-lock locked" data-toggle="modal" data-target="#modal-lock"></button>
 							</div>
+						</td>
+						<td>
+							<button type="button" class="btn_main btn_2 btn-public w-100" onclick="this.classList.toggle('published')"></button>
 						</td>
 					</tr>
 					<tr>
 						<td>4</td>
-						<td>Франшиза</td>
 						<td>Название объявления</td>
-						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td></td>
 						<td></td>
 						<td>
 							<div class="d-flex justify-content-center">
-								<button type="button" class="btn-lock locked" data-toggle="modal" data-target="#modal-lock"></button>
+								<button type="button" class="btn-lock" data-toggle="modal" data-target="#modal-lock"></button>
 							</div>
+						</td>
+						<td>
+							<button type="button" class="btn_main btn_2 btn-public w-100" onclick="this.classList.toggle('published')"></button>
 						</td>
 					</tr>
 					<tr>
 						<td>5</td>
-						<td>Инвестор</td>
 						<td>Название объявления</td>
-						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td></td>
 						<td></td>
 						<td>
 							<div class="d-flex justify-content-center">
-								<button type="button" class="btn-lock locked" data-toggle="modal" data-target="#modal-lock"></button>
+								<button type="button" class="btn-lock" data-toggle="modal" data-target="#modal-lock"></button>
 							</div>
+						</td>
+						<td>
+							<button type="button" class="btn_main btn_2 btn-public published w-100" onclick="this.classList.toggle('published')"></button>
 						</td>
 					</tr>
 					<tr>
 						<td>6</td>
-						<td>Бизнес партнёр</td>
 						<td>Название объявления</td>
-						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td>4 (12) </td>
-						<td>7</td>
+						<td>1</td>
 						<td>
 							<div class="d-flex justify-content-center">
-								<button type="button" class="btn-lock locked" data-toggle="modal" data-target="#modal-lock"></button>
+								<button type="button" class="btn-lock" data-toggle="modal" data-target="#modal-lock"></button>
 							</div>
+						</td>
+						<td>
+							<button type="button" class="btn_main btn_2 btn-public published w-100" onclick="this.classList.toggle('published')"></button>
 						</td>
 					</tr>
 					<tr>
 						<td>7</td>
-						<td>Франшиза</td>
 						<td>Название объявления</td>
-						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td></td>
 						<td></td>
 						<td>
 							<div class="d-flex justify-content-center">
-								<button type="button" class="btn-lock locked" data-toggle="modal" data-target="#modal-lock"></button>
+								<button type="button" class="btn-lock" data-toggle="modal" data-target="#modal-lock"></button>
 							</div>
+						</td>
+						<td>
+							<button type="button" class="btn_main btn_2 btn-public published w-100" onclick="this.classList.toggle('published')"></button>
 						</td>
 					</tr>
 					<tr>
 						<td>8</td>
-						<td>Инвестор</td>
 						<td>Название объявления</td>
-						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td></td>
-						<td></td>
+						<td>3</td>
 						<td>
 							<div class="d-flex justify-content-center">
 								<button type="button" class="btn-lock" data-toggle="modal" data-target="#modal-lock"></button>
 							</div>
 						</td>
+						<td>
+							<button type="button" class="btn_main btn_2 btn-public published w-100" onclick="this.classList.toggle('published')"></button>
+						</td>
 					</tr>
 					<tr>
 						<td>9</td>
-						<td>Бизнес партнёр</td>
 						<td>Название объявления</td>
-						<td>Не оплачено</td>
 						<td>mail@mail.ru</td>
-						<td>4 (12) </td>
 						<td>7</td>
 						<td>
 							<div class="d-flex justify-content-center">
-								<button type="button" class="btn-lock" data-toggle="modal" data-target="#modal-lock"></button>
+								<button type="button" class="btn-lock locked" data-toggle="modal" data-target="#modal-lock"></button>
 							</div>
+						</td>
+						<td>
+							<button type="button" class="btn_main btn_2 btn-public w-100" onclick="this.classList.toggle('published')"></button>
 						</td>
 					</tr>
 				</tbody>
@@ -450,7 +434,7 @@
 		<div class="modal-dialog modal-small">
 			<div class="modal-content">
 				<div class="m-head">
-					<h3>Заблокировать</h3>
+					<h3>Объявление</h3>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<svg viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" clip-rule="evenodd" d="M7.08575 8.5L0.292847 15.2929L1.70706 16.7071L8.49997 9.91421L15.2929 16.7071L16.7071 15.2929L9.91418 8.5L16.7071 1.70712L15.2928 0.292908L8.49997 7.08579L1.70709 0.292908L0.292876 1.70712L7.08575 8.5Z"/>
@@ -474,6 +458,28 @@
 							</button>
 						</div>
 						<button type="submit" class="btn_main btn_2 w-100 mb-3">Сохранить</button>
+						<button type="button" data-dismiss="modal" class="btn_main btn_3 w-100">Отменить</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="modal-publication" tabindex="-1" role="dialog" aria-hidden="true">
+		<div class="modal-dialog modal-small">
+			<div class="modal-content">
+				<div class="m-head">
+					<h3>Объявление</h3>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<svg viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M7.08575 8.5L0.292847 15.2929L1.70706 16.7071L8.49997 9.91421L15.2929 16.7071L16.7071 15.2929L9.91418 8.5L16.7071 1.70712L15.2928 0.292908L8.49997 7.08579L1.70709 0.292908L0.292876 1.70712L7.08575 8.5Z"/>
+						</svg>
+					</button>
+				</div>
+				<div class="m-body">
+					<form action="" class="f_09">
+						<p class="mp-text gray f_09 text-center"></p>
+						<button type="submit" class="mp-btn-toggle btn_main btn_2 w-100 mb-3"></button>
 						<button type="button" data-dismiss="modal" class="btn_main btn_3 w-100">Отменить</button>
 					</form>
 				</div>
