--- a/partners.html
+++ b/partners.html
@@ -7,8 +7,6 @@
   <title>Бизнес my life - административная панель</title>
   <link rel="shortcut icon" href="images/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/style.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -16,7 +14,16 @@
 <body>
 	<header class="px-4 px-xl-5">
 		<div class="h-100 d-flex justify-content-between align-items-center">
-			<img src="images/logo.png" alt="">
+			<div class="d-flex">
+				<button class="hamburger show-aside mr-4" data-target="#menu">
+					<svg width="21" height="15" viewBox="0 0 21 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<rect width="21" height="3" rx="1.5" fill="white"/>
+						<rect y="6" width="21" height="3" rx="1.5" fill="white"/>
+						<rect y="12" width="21" height="3" rx="1.5" fill="white"/>
+					</svg>					
+				</button>
+				<img src="images/logo.png" alt="" class="logo">
+			</div>
 			<div class="d-flex align-items-center">
 				<a href="#" class="header-btn">
 					<svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -34,7 +41,7 @@
 		</div>
 	</header>
 
-	<aside class="py-3 py-xl-4">
+	<aside id="menu">
 		<nav class="menu">
 			<ul>
 				<li>
@@ -509,10 +516,6 @@
 	<!-- Skripts -->
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
-	<script type="text/javascript" src="js/swiper-bundle.min.js"></script>
-	<script type="text/javascript" src="js/jquery.fancybox.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
-	
 </body>
 </html>
